--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">bleep</a>
+        </div>
+      </div>
+      <ul class="nav navbar-nav">
+        <li id="streamup-li" class="active"><a id="streamup-button" href="#">Streamup</a></li>
+        <li id="hitbox-li"><a id="hitbox-button" href="#">Hitbox</a></li>
+      </ul>
+    </nav>
+
       <div id="container">
       <div class="stream" id="stream_1">
         <iframe id='su-ivp'
@@ -21,7 +41,7 @@
       </div>
 
       <div class="stream" id="stream_2">
-        FUCK YOU THIS IS A DIFFERENT STREAM
+        HITBOX STREAM GOES HERE
       </div>
 
       <div id="chat">
@@ -34,13 +54,6 @@
       </div>
 
     </div>
-
-    <!--<div id="container2">
-      <div id="buttons">
-        <button id="switch_button">Switch streams</button>
-      </div>
-    </div>
-    -->
 
     <script type="text/javascript" src="script.js"></script>
   </body>
