--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
   <body>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">bleep</a>
-        </div>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">bleep.moe</a>
       </div>
       <ul class="nav navbar-nav">
         <li id="streamup-li" class="active"><a id="streamup-button" href="#">Streamup</a></li>
