made hitbox default

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a class="navbar-brand" href="#">bleep.moe</a>
       </div>
       <ul class="nav navbar-nav">
-        <li id="streamup-li" class="active"><a id="streamup-button" href="#">Streamup</a></li>
-        <li id="hitbox-li"><a id="hitbox-button" href="#">Hitbox</a></li>
+        <li id="hitbox-li" class="active"><a id="hitbox-button" href="#">Hitbox</a></li>
+        <li id="streamup-li"><a id="streamup-button" href="#">Streamup</a></li>
       </ul>
     </nav>
 
