--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       </div>
 
       <div class="stream" id="stream_2">
-        HITBOX STREAM GOES HERE
+        <iframe width="100%" height="100%"
+                src="http://hitbox.tv/#!/embed/bleep"
+                frameborer="0"
+                allowfullscreen></iframe>
       </div>
 
       <div id="chat">
