--- a/index.html
+++ b/index.html
@@ -35,14 +35,22 @@
                 allowTransparency='true'
                 allowFullScreen='true'
                 seamless
-                style="width: 100%; height: 100%"> </iframe>
+                width="100%"
+                height="100%"> </iframe>
       </div>
 
       <div class="stream" id="stream_2">
         <iframe width="100%" height="100%"
                 src="http://hitbox.tv/#!/embed/bleep"
-                frameborer="0"
-                allowfullscreen></iframe>
+                scrolling='no'
+                frameborder='0'
+                marginwidth='500px'
+                marginheight='0'
+                allowTransparency='true'
+                allowFullScreen='true'
+                seamless
+                width="100%"
+                height="100%"></iframe>
       </div>
 
       <div id="chat">
