--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
       <ul class="nav navbar-nav">
         <li id="hitbox-li" class="active"><a id="hitbox-button" href="#hitbox">Hitbox</a></li>
         <li id="streamup-li"><a id="streamup-button" href="#streamup">Streamup</a></li>
+        <li id="twitter-li">
+          <a id="twitter-button" href="https://twitter.com/touhoudottxt">
+            <img height="18px" src="icon_twitter-sign.svg"></img>
+            @touhou_txt
+          </a>
+        </li>
+        <li id="youtube-li">
+          <a id="youtube-button" href="https://www.youtube.com/user/bleepndoki">
+            <img height="18px" src="icon_youtube-sign.svg"></img>
+            bleepndoki
+          </a>
+        </li>
       </ul>
     </nav>
 
