--- a/index.html
+++ b/index.html
@@ -14,28 +14,6 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">bleep.moe</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li id="hitbox-li" class="active"><a id="hitbox-button" href="#hitbox">Hitbox</a></li>
-        <li id="streamup-li"><a id="streamup-button" href="#streamup">Streamup</a></li>
-        <li id="twitter-li">
-          <a id="twitter-button" target="_blank" href="https://twitter.com/touhoudottxt">
-            <img height="18px" src="icon_twitter-sign.svg"></img>
-            @touhou_txt
-          </a>
-        </li>
-        <li id="youtube-li">
-          <a id="youtube-button" target="_blank" href="https://www.youtube.com/user/bleepndoki">
-            <img height="18px" src="icon_youtube-sign.svg"></img>
-            bleepndoki
-          </a>
-        </li>
-      </ul>
-    </nav>
-
     <div id="container">
       <div class="stream" id="stream_1">
         <iframe id='su-ivp'
@@ -65,13 +43,38 @@
                 height="100%"></iframe>
       </div>
 
-      <div id="chat">
-        <script id="cid0020000110989497972"
-                data-cfasync="false"
-                async src="http://st.chatango.com/js/gz/emb.js"
-                style="width: 100%;height: 100%;">
-                {"handle":"bleepmoe","arch":"js","styles":{"a":"733912","b":100,"c":"000000","d":"000000","e":"a05f33","h":"a05f33","k":"a05f33","l":"a05f33","m":"dadada","p":"14.58","q":"733912","r":100,"t":0,"usricon":0,"sbc":"733912","surl":0,"allowpm":0,"fwtickm":1}}</script>
+      <div id="right">
+        <nav class="navbar navbar-default">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">bleep.moe</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li id="hitbox-li" class="active"><a id="hitbox-button" href="#hitbox">Hitbox</a></li>
+            <li id="streamup-li"><a id="streamup-button" href="#streamup">Streamup</a></li>
+            <li id="twitter-li">
+              <a id="twitter-button" target="_blank" href="https://twitter.com/touhoudottxt">
+                <img height="18px" src="icon_twitter-sign.svg"></img>
+                @touhou_txt
+              </a>
+            </li>
+            <li id="youtube-li">
+              <a id="youtube-button" target="_blank" href="https://www.youtube.com/user/bleepndoki">
+                <img height="18px" src="icon_youtube-sign.svg"></img>
+                bleepndoki
+              </a>
+            </li>
+          </ul>
+        </nav>
 
+
+        <div id="chat">
+          <script id="cid0020000110989497972"
+                  data-cfasync="false"
+                  async src="http://st.chatango.com/js/gz/emb.js"
+                  style="width: 100%;height: 100%;">
+                  {"handle":"bleepmoe","arch":"js","styles":{"a":"733912","b":100,"c":"000000","d":"000000","e":"a05f33","h":"a05f33","k":"a05f33","l":"a05f33","m":"dadada","p":"14.58","q":"733912","r":100,"t":0,"usricon":0,"sbc":"733912","surl":0,"allowpm":0,"fwtickm":1}}</script>
+
+        </div>
       </div>
     </div>
 
